finished exo 2, started exo 3, welp i tried

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="nav-item" id="exercice-3"><a href="">Exercice 3</a></div>
 	</nav>
 	<iframe id="view" title="view" src="about:blank"></iframe>
-	<script type="module" src="js/main.js"></script>
 	<script type="module" src="js/modules/index.js"></script>
+	<script type="module" src="js/main.js"></script><!-- must be last in body -->
 </body>
 </html>
