--- a/pages/exercice1.html
+++ b/pages/exercice1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<p id="subject">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>Praesentium necessitatibus inventore provident esse ab, reprehenderit non <br>veniam vero ratione, fugiat deserunt temporibus porro exercitationem asperiores tempora minus ut delectus est?</p>
-	<script type="module" src="../js/main.js"></script>
 	<script type="module" src="../js/modules/exercice1.js"></script>
+	<script type="module" src="../js/main.js"></script><!-- must be last in body -->
 </body>
 </html>
