--- a/pages/exercice2.html
+++ b/pages/exercice2.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="../css/pages/exercice2.css">
 </head>
 <body>
-	<script type="module" src="../js/main.js"></script>
 	<script type="module" src="../js/modules/exercice2.js"></script>
+	<script type="module" src="../js/main.js"></script><!-- must be last in body -->
 </body>
 </html>
